--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,52 @@
+arabic-reshaper==3.0.0
 asgiref==3.10.0
+asn1crypto==1.5.1
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
 colorama==0.4.6
 confusable-homoglyphs==3.3.1
+cryptography==46.0.3
+cssselect2==0.8.0
 dj-database-url==3.0.1
 Django==4.2.14
 django-formtools==2.5.1
 django-registration==5.2.1
 docopt==0.6.2
+freetype-py==2.5.1
 gunicorn==23.0.0
+html5lib==1.1
+idna==3.11
 jpype1==1.6.0
+lxml==6.0.2
 num2words==0.5.14
+oscrypto==1.3.0
 packaging==25.0
 pillow==12.0.0
 psycopg2-binary==2.9.11
 py4j==0.10.9.9
 py4jasper==1.0.0.0
+pycairo==1.29.0
+pycparser==2.23
+pyHanko==0.32.0
+pyhanko-certvalidator==0.29.0
+pypdf==6.4.2
 pyreportjasper==2.1.4
+python-bidi==0.6.7
 python-dotenv==1.2.1
+PyYAML==6.0.3
 qrcode==8.2
+reportlab==4.4.6
+requests==2.32.5
+rlPyCairo==0.4.0
+six==1.17.0
 sqlparse==0.5.3
+svglib==1.6.0
+tinycss2==1.5.1
 tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.6.2
+webencodings==0.5.1
 whitenoise==6.11.0
+xhtml2pdf==0.2.17
